successful build, but doubt if the macro AT is correct

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,18 @@
 cmake_minimum_required(VERSION 3.10.1) # for CUDA support
+project(LpSolver LANGUAGES C CXX CUDA)
 if(MSVC)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W3 /WX")
 else()
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W -Wall -Werror")
 endif()
-enable_language(CUDA)
+# enable_language(CUDA)
 set (CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-omit-frame-pointer")
 set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -fno-omit-frame-pointer")
+set(CMAKE_C_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-omit-frame-pointer")
+set(CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -fno-omit-frame-pointer")
+#set(CMAKE_CUDA_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Xcompiler -fno-omit-frame-pointer")
+#set(CMAKE_CUDA_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -Xcompiler -fno-omit-frame-pointer")
 find_package( BLAS )
 
 
@@ -18,11 +23,11 @@ add_library( lpsolver
   src/liblp.c
   src/matman.c)
 target_include_directories( lpsolver PUBLIC include )
-target_link_libraries( lpsolver PUBLIC  )
+target_link_libraries( lpsolver PUBLIC -lcublas ${BLAS_LIBRARIES} )
 
 add_executable( cpu_solver src/lpsolver.c )
 target_link_libraries( cpu_solver PRIVATE lpsolver )
 
-add_executable( gpu_solver src/culpsolver.cpp )
+add_executable( gpu_solver src/culpsolver.cu )
 target_link_libraries( gpu_solver PRIVATE lpsolver )
 
